// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ICML commands are supported 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            Body text.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`institute command is supported 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <h1
          class="ltx_title ltx_title_document"
        >
          A Title
        </h1>
        <div
          class="engrafo-metadata"
        >
          <div
            class="ltx_authors"
          >
            

            <span
              class="ltx_creator ltx_role_author"
            >
              

              <span
                class="ltx_personname"
              >
                Ekaterina Vylomova
                <span
                  class="ltx_ERROR undefined"
                >
                  \\inst
                </span>
                1 

              </span>
            </span>
            

            <span
              class="ltx_author_before"
            >
                
            </span>
            <span
              class="ltx_creator ltx_role_author"
            >
              

              <span
                class="ltx_personname"
              >
                Andrei Shcherbakov
                <span
                  class="ltx_ERROR undefined"
                >
                  \\inst
                </span>
                1 

              </span>
            </span>
            

            <span
              class="ltx_author_before"
            >
                
            </span>
            <span
              class="ltx_creator ltx_role_author"
            >
              

              <span
                class="ltx_personname"
              >
                Yuriy Philippovich
                <span
                  class="ltx_ERROR undefined"
                >
                  \\inst
                </span>
                2 

              </span>
            </span>
            

            <span
              class="ltx_author_before"
            >
                
            </span>
            <span
              class="ltx_creator ltx_role_author"
            >
              

              <span
                class="ltx_personname"
              >
                Galina Cherkasova
                <span
                  class="ltx_ERROR undefined"
                >
                  \\inst
                </span>
                3

              </span>
            </span>
            

          </div>
          <div
            class="engrafo-metadata-custom"
          />
        </div>
        


        <span
          class="ltx_ERROR undefined"
        >
          \\institute
        </span>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            The University of Melbourne, Melbourne, Australia,

            <br
              class="ltx_break"
            />
            <span
              class="ltx_ERROR undefined"
            >
              \\email
            </span>
            evylomova@gmail.com & 
            <span
              class="ltx_ERROR undefined"
            >
              \\email
            </span>
            ultrasparc@yandex.ru,
 and Moscow Polytech, Moscow, Russia,

            <br
              class="ltx_break"
            />
            <span
              class="ltx_ERROR undefined"
            >
              \\email
            </span>
            Y_philippovich@mail.ru
 and Institute of the Science of Language, Moscow, Russia

            <br
              class="ltx_break"
            />
            <span
              class="ltx_ERROR undefined"
            >
              \\email
            </span>
            gacherk@mail.ru
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            Body text.
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`links get wrapped in anchors 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            http link: http://link.co.uk/to#something
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            https link: https://link.info?param url
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p3"
        >
          

          <p
            class="ltx_p"
          >
            link with trailing period: https://example.com.
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p4"
        >
          

          <p
            class="ltx_p"
          >
            this should not make a link: foo.bar
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p5"
        >
          

          <p
            class="ltx_p"
          >
            this is a link without leading space: badlatex.http://example.com
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p6"
        >
          

          <p
            class="ltx_p"
          >
            this is already a link: 
            <span
              class="ltx_ERROR undefined"
            >
              \\href
            </span>
            http://example.comexample.com
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p7"
        >
          

          <p
            class="ltx_p"
          >
            this is a link without http: 
            <span
              class="ltx_ERROR undefined"
            >
              \\href
            </span>
            example.comexample.com
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`lists render correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <ul
            class="ltx_itemize"
          >
            

            <li
              class="ltx_item"
              id=".i1"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_itemize"
              >
                •
              </span>
               

              <div
                class="ltx_para"
                id=".i1.p1"
              >
                

                <p
                  class="ltx_p"
                >
                  An unordered list
                </p>
                

              </div>
              

            </li>
            

            <li
              class="ltx_item"
              id=".i2"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_itemize"
              >
                •
              </span>
               

              <div
                class="ltx_para"
                id=".i2.p1"
              >
                

                <p
                  class="ltx_p"
                >
                  Second item
                </p>
                

              </div>
              

            </li>
            

          </ul>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <ol
            class="ltx_enumerate"
          >
            

            <li
              class="ltx_item"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_enumerate"
              >
                <span
                  class="ltx_ERROR undefined"
                >
                  \\theenumi
                </span>
                .
              </span>
               

              <div
                class="ltx_para"
                id="p2.p1"
              >
                

                <p
                  class="ltx_p"
                >
                  An ordered list
                </p>
                

              </div>
              

            </li>
            

            <li
              class="ltx_item"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_enumerate"
              >
                <span
                  class="ltx_ERROR undefined"
                >
                  \\theenumi
                </span>
                .
              </span>
               

              <div
                class="ltx_para"
                id="p2.p2"
              >
                

                <p
                  class="ltx_p"
                >
                  Second one.
                </p>
                

              </div>
              

            </li>
            

          </ol>
          

        </div>
        

        <div
          class="ltx_para"
          id="p3"
        >
          

          <ul
            class="ltx_itemize"
          >
            

            <li
              class="ltx_item"
              id=".i1a"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_itemize"
              >
                •
              </span>
               

              <div
                class="ltx_para"
                id=".i1a.p1"
              >
                

                <p
                  class="ltx_p"
                >
                  A nested unordered list
                </p>
                

                <ul
                  class="ltx_itemize"
                >
                  

                  <li
                    class="ltx_item"
                    id=".i1b"
                    style="list-style-type:none;"
                  >
                    

                    <span
                      class="ltx_tag ltx_tag_itemize"
                    >
                      <span
                        class="ltx_text ltx_font_bold"
                      >
                        –
                      </span>
                    </span>
                     

                    <div
                      class="ltx_para"
                      id=".i1b.p1"
                    >
                      

                      <p
                        class="ltx_p"
                      >
                        First nested item
                      </p>
                      

                    </div>
                    

                  </li>
                  

                  <li
                    class="ltx_item"
                    id=".i2a"
                    style="list-style-type:none;"
                  >
                    

                    <span
                      class="ltx_tag ltx_tag_itemize"
                    >
                      <span
                        class="ltx_text ltx_font_bold"
                      >
                        –
                      </span>
                    </span>
                     

                    <div
                      class="ltx_para"
                      id=".i2a.p1"
                    >
                      

                      <p
                        class="ltx_p"
                      >
                        Second nested item
                      </p>
                      

                    </div>
                    

                  </li>
                  

                </ul>
                

              </div>
              

            </li>
            

            <li
              class="ltx_item"
              id=".i2b"
              style="list-style-type:none;"
            >
              

              <span
                class="ltx_tag ltx_tag_itemize"
              >
                •
              </span>
               

              <div
                class="ltx_para"
                id=".i2b.p1"
              >
                

                <p
                  class="ltx_p"
                >
                  Second item
                </p>
                

              </div>
              

            </li>
            

          </ul>
          

        </div>
        

        <section
          class="ltx_section"
          id=".i2c"
        >
          

          <h2
            class="ltx_title ltx_title_section"
          >
            

            <span
              class="ltx_tag ltx_tag_section"
            >
              <a
                href="#.i2c"
              >
                <span
                  class="ltx_ERROR undefined"
                >
                  \\thesection
                </span>
                 
              </a>
            </span>
            A nested ordered list
          </h2>
          


          <div
            class="ltx_para"
            id=".i2c.p1"
          >
            

            <ol
              class="ltx_enumerate"
            >
              

              <li
                class="ltx_item"
                style="list-style-type:none;"
              >
                

                <span
                  class="ltx_tag ltx_tag_enumerate"
                >
                  <span
                    class="ltx_ERROR undefined"
                  >
                    \\theenumi
                  </span>
                  .
                </span>
                 

                <div
                  class="ltx_para"
                  id=".i2c.p1.p1"
                >
                  

                  <p
                    class="ltx_p"
                  >
                    First item
                  </p>
                  

                  <ol
                    class="ltx_enumerate"
                  >
                    

                    <li
                      class="ltx_item"
                      style="list-style-type:none;"
                    >
                      

                      <span
                        class="ltx_tag ltx_tag_enumerate"
                      >
                        (
                        <span
                          class="ltx_ERROR undefined"
                        >
                          \\theenumii
                        </span>
                        )
                      </span>
                       

                      <div
                        class="ltx_para"
                        id=".i2c.p1.p1.p1"
                      >
                        

                        <p
                          class="ltx_p"
                        >
                          First nested item
                        </p>
                        

                      </div>
                      

                    </li>
                    

                    <li
                      class="ltx_item"
                      style="list-style-type:none;"
                    >
                      

                      <span
                        class="ltx_tag ltx_tag_enumerate"
                      >
                        (
                        <span
                          class="ltx_ERROR undefined"
                        >
                          \\theenumii
                        </span>
                        )
                      </span>
                       

                      <div
                        class="ltx_para"
                        id=".i2c.p1.p1.p2"
                      >
                        

                        <p
                          class="ltx_p"
                        >
                          Second nested item
                        </p>
                        

                      </div>
                      

                    </li>
                    

                  </ol>
                  

                </div>
                

              </li>
              

              <li
                class="ltx_item"
                style="list-style-type:none;"
              >
                

                <span
                  class="ltx_tag ltx_tag_enumerate"
                >
                  <span
                    class="ltx_ERROR undefined"
                  >
                    \\theenumi
                  </span>
                  .
                </span>
                 

                <div
                  class="ltx_para"
                  id=".i2c.p1.p2"
                >
                  

                  <p
                    class="ltx_p"
                  >
                    Second item
                  </p>
                  

                </div>
                

              </li>
              

            </ol>
            

          </div>
          

        </section>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`pdfoutput=1 is ignored 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            hello world
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`pinforms3 TITLE, AUTHOR, AFF are supported 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        <span
          class="ltx_ERROR undefined"
        >
          \\TITLE
        </span>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            The Title of the Paper
          </p>
          

        </div>
        

        <span
          class="ltx_ERROR undefined"
        >
          \\ARTICLEAUTHORS
        </span>
        <span
          class="ltx_ERROR undefined"
        >
          \\AUTHOR
        </span>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            Author Name

            <span
              class="ltx_ERROR undefined"
            >
              \\AFF
            </span>
            Author Affiliation
          </p>
          

        </div>
        

        <span
          class="ltx_ERROR undefined"
        >
          \\ABSTRACT
        </span>
        

        <div
          class="ltx_para"
          id="p3"
        >
          

          <p
            class="ltx_p"
          >
            This is the abstract.
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p4"
        >
          

          <p
            class="ltx_p"
          >
            hello world
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`text formatting renders correctly 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            This is 
            <span
              class="ltx_text ltx_font_bold"
            >
              bold
            </span>
            .
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            This is 
            <span
              class="ltx_text ltx_font_italic"
            >
              textit
            </span>
            .
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p3"
        >
          

          <p
            class="ltx_p"
          >
            This is 
            <em
              class="ltx_emph ltx_font_italic"
            >
              emph
            </em>
            .
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p4"
        >
          

          <p
            class="ltx_p"
          >
            This is 
            <span
              class="ltx_ERROR undefined"
            >
              \\href
            </span>
            https://www.example.coma link.
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p5"
        >
          

          <p
            class="ltx_p"
          >
            This is 
            <span
              class="ltx_text ltx_font_typewriter"
            >
              fixed width
            </span>
            .
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;

exports[`vskip is ignored 1`] = `
<body>
  <div
    class="engrafo-container"
  >
    


    <div
      class="ltx_page_content"
    >
      

      <dt-article>
        

        <div
          class="ltx_para"
          id="p1"
        >
          

          <p
            class="ltx_p"
          >
            before
          </p>
          

        </div>
        

        <div
          class="ltx_para"
          id="p2"
        >
          

          <p
            class="ltx_p"
          >
            after
          </p>
          

        </div>
        

      </dt-article>
      

      <dt-appendix>
        

        


        <div
          class="l-body"
        />
        

      </dt-appendix>
    </div>
    





    <div
      id="footnote-hover-boxes-container"
    />
  </div>
</body>
`;
